# request_curl

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish-to-docker-hub.yml  publish-to-pypi.yml  test-and-lint.yml
request_curl/: __init__.py  api.py  defaults.py  dict.py  helper.py  models.py  sessions.py
tests/: conftest.py  test_request_curl.py  test_tls_requests.py
