[tool.poetry]
name = "request_curl"
version = "0.0.2"
description = "A user-friendly wrapper for pycurl that simplifies HTTP requests"
authors = ["Mauritz Uphoff <mauritz.uphoff@hs-osnabrueck.de>", "Ennis Blank <Ennis.Blank@fau.de>"]
readme = "README.md"
license = "MIT"
maintainers = ["Mauritz Uphoff", "Ennis Blank"]
homepage = "https://github.com/Notifysolutions/request_curl"
repository = "https://github.com/Notifysolutions/request_curl"
documentation = "https://github.com/Notifysolutions/request_curl/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
Brotli = "^1.0.9"
pycurl = "^7.45.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
